2012-11-17  Charlie Zender  <zender@uci.edu>

	* Fix nco_chk_trv() for -g '' and -v ''

2012-11-16  Charlie Zender  <zender@uci.edu>

	* nco_chk_trv() allows multi-component user-supplied paths

2012-11-15  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #32: Sort output alphabetically

2012-11-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.4 release procedure:
 	Changes since nco-4_2_3:
	cd ~/nco;cvs tag -d nco-4_2_4;cvs tag -d nco-4_2_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.4 release"
	cvs tag -c nco-4_2_4;cvs tag -c nco-4_2_4-1

	* Start multi-component path work in nco_chk_trv()

	* Change var and grp to obj where usage is generic

	* Change nc_typ to nco_obj_typ

2012-11-13  Charlie Zender  <zender@uci.edu>

	* ncunits filter

	* NCO 4.2.3 release procedure:
 	Changes since nco-4_2_2: GPE, ncecat fix, group atts.
	cd ~/nco;cvs tag -d nco-4_2_3;cvs tag -d nco-4_2_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.3 release"
	cvs tag -c nco-4_2_3;cvs tag -c nco-4_2_3-1

2012-11-11  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #31: Group dimension hyperslabs

2012-11-09  Charlie Zender  <zender@uci.edu>

 	* GPE documentation

	* Change most "Global" to "Group" attributes when printing metadata

2012-11-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.3 release procedure:
 	Changes since nco-4_2_2: GPE, ncecat fix, group atts.
	cd ~/nco;cvs tag -d nco-4_2_3;cvs tag -d nco-4_2_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.3 release"
	cvs tag -c nco-4_2_3;cvs tag -c nco-4_2_3-1

2012-11-08  Pedro Vicente  <pvicente@uci.edu>

	* ncks: GPE group attribute extraction

	* ncks regression test #30: GPE group attribute extraction

2012-11-07  Pedro Vicente  <pvicente@uci.edu>

	* ncks: nco_att_cpy_trv: Copy group attributes

2012-11-06  Pedro Vicente  <pvicente@uci.edu>

	* ncks: Handle GPE redundancy

2012-11-05  Charlie Zender  <zender@uci.edu>

	* ncks/ncecat: Complete and test GPE infrastructure
